fix(webapp): Comparison tag selector text-overflow

--- a/webapp/javascript/pages/tagExplorer/components/TagsSelector.module.scss
+++ b/webapp/javascript/pages/tagExplorer/components/TagsSelector.module.scss
@@ -23,6 +23,10 @@
       padding: 10px 30px;
       width: 100%;
       text-align: left;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: 100%;
     }
   }
 }
